Bug 1600261 - Call MakeCurrent() before calling eglSwapInterval r=stransky

By bug 1597619 change, MakeCurrent() became not called before calling eglSwapInterval. The comment already mentioned this requirement.

Differential Revision: https://phabricator.services.mozilla.com/D55272

--HG--
extra : moz-landing-system : lando